if(NOT ICHOR_SERIALIZATION_FRAMEWORK STREQUAL "OFF")
    file(GLOB_RECURSE PROJECT_EXAMPLE_SOURCES ${ICHOR_TOP_DIR}/benchmarks/serializer_benchmark/*.cpp)
    add_executable(ichor_serializer_benchmark ${PROJECT_EXAMPLE_SOURCES})
    target_link_libraries(ichor_serializer_benchmark ${CMAKE_THREAD_LIBS_INIT})
    target_link_libraries(ichor_serializer_benchmark ichor)
endif()

file(GLOB_RECURSE PROJECT_EXAMPLE_SOURCES ${ICHOR_TOP_DIR}/benchmarks/coroutine_benchmark/*.cpp)
add_executable(ichor_coroutine_benchmark ${PROJECT_EXAMPLE_SOURCES})
target_link_libraries(ichor_coroutine_benchmark ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ichor_coroutine_benchmark ichor)

file(GLOB_RECURSE PROJECT_EXAMPLE_SOURCES ${ICHOR_TOP_DIR}/benchmarks/start_stop_benchmark/*.cpp)
add_executable(ichor_start_stop_benchmark ${PROJECT_EXAMPLE_SOURCES})
target_link_libraries(ichor_start_stop_benchmark ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ichor_start_stop_benchmark ichor)

file(GLOB_RECURSE PROJECT_EXAMPLE_SOURCES ${ICHOR_TOP_DIR}/benchmarks/start_benchmark/*.cpp)
add_executable(ichor_start_benchmark ${PROJECT_EXAMPLE_SOURCES})
target_link_libraries(ichor_start_benchmark ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ichor_start_benchmark ichor)

file(GLOB_RECURSE PROJECT_EXAMPLE_SOURCES ${ICHOR_TOP_DIR}/benchmarks/event_benchmark/*.cpp)
add_executable(ichor_event_benchmark ${PROJECT_EXAMPLE_SOURCES})
target_link_libraries(ichor_event_benchmark ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(ichor_event_benchmark ichor)